EXPLORE-107: Unit Tests fixed